--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg bg" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand custom-navbar-brand" href="#">
-                <img src="/logo.png" alt="AniReview Logo">
+                <img src="logo.png" alt="AniReview Logo">
                 <p style="font-size: 4vw;">Forge Code</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
@@ -56,7 +56,7 @@
     </nav>
 
     <div id="pfp" class="pfp">
-        <img src="/pfp.jpeg">
+        <img src="pfp.jpeg">
     </div>
     <!--image header -->
     <div class="intro">
@@ -72,7 +72,7 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/holy.png" class="d-block w-100" alt="First Slide">
+                <img src="holy.png" class="d-block w-100" alt="First Slide">
                 <div class="carousel-caption d-lg-none">
                     <h3>Holy Redeemer School of Dasmariñas</h3>
                     <h5>Elementary to Junior Highschool</h5>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/pcu.png" class="d-block w-100" alt="Second Slide">
+                <img src="pcu.png" class="d-block w-100" alt="Second Slide">
                 <div class="carousel-caption d-lg-none">
                     <h3>Philippine Christian University Dasmariñas</h3>
                     <h5>Senior Highschool</h5>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/kld.png" class="d-block w-100" alt="Third Slide">
+                <img src="kld.png" class="d-block w-100" alt="Third Slide">
                 <div class="carousel-caption d-lg-none">
                     <h3>Kolehiyo ng Lungsod ng Dasmariñas</h3>
                     <h5>College</h5>
@@ -114,21 +114,21 @@
     <div id="carouselExampleProjects" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/AniReview.png" class="d-block w-100" alt="First Slide">
+                <img src="AniReview.png" class="d-block w-100" alt="First Slide">
                 <div class="carousel-caption2 d-lg-none">
                     <h3>AniReview</h3>
                     <a href="https://dogsezedward.github.io/AniReview/" class="btn btn-primary carousel-button">Details</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/resume.png" alt="Second Slide">
+                <img src="resume.png" alt="Second Slide">
                 <div class="carousel-caption2 d-lg-none">
                     <h5>My Resume</h5>
                     <a href="https://dogsezedward.github.io/QuintosPortfolio/" class="btn btn-primary carousel-button">Details</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/cor.png"" alt="Third Slide">
+                <img src="cor.png"" alt="Third Slide">
                 <div class="carousel-caption2 d-lg-none">
                     <h5>My COR</h5>
                     <a href="https://dogsezedward.github.io/COR/" class="btn btn-primary carousel-button">Details</a>
