--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0">
 
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg bg-danger" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg " data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand custom-navbar-brand" href="#">
                 <img src="logo.png" alt="AniReview Logo">
